--- a/Water_Features/l10n/es-ES.json
+++ b/Water_Features/l10n/es-ES.json
@@ -3,6 +3,8 @@
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Corrientes estacionales",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Herramienta de agua",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Olas y mareas",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Stable]": "Estable",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Experimental]": "Experimental",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Corrientes estacionales",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Herramienta de agua",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Olas y mareas",
@@ -53,7 +55,7 @@
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Al confirmar, se restablecerán los ajustes de la herramienta de agua.",
   "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "¿Restablecer ajustes de olas y mareas?",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]": "Diurna",
-  "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "Semidiurnal",
+  "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "Semidiurno",
   "YY_WATER_FEATURES.Flow": "Fluidez",
   "YY_WATER_FEATURES.Depth": "Profundidad",
   "YY_WATER_FEATURES.MaxDepth": "Profundidad máxima",
@@ -93,11 +95,9 @@
   "Tooltip.LABEL[YY.WT.PlaceInsideBorder]": "Esta fuente de agua debe colocarse dentro del mapa jugable.",
   "Tooltip.LABEL[YY.WT.MustTouchBorder]": "Las fuentes de agua del mar deben tocar la frontera del mapa.",
   "Tooltip.LABEL[YY.WT.LockElevation]": "Haga clic derecho para designar la elevación de la superficie del agua.",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Experimental]": "Experimental",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Stable]": "Estable",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Fluidez",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Altera el factor de fluidez del sistema de agua. Esto debe cambiar las características del caudal. Esto puede crear pequeñas olas, causar inundación o causar inestabilidades y picos en el sistema de agua.",
-  "Editor.TOOL[Yenyang's Water Tool]": "Yenyang's Water Tool",
+  "Editor.TOOL[Yenyang's Water Tool]": "Herramienta de agua de Yenyang",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Los ajustes de la herramienta de agua afectan la simulación en el editor",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Permite que los ajustes en la pestaña de herramienta de agua afecten la simulación en el editor como la evaporación, fluidez, y el ciclo de limpieza.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "Los ajustes de las corrientes estacionales afectan la simulación en el editor",
@@ -111,5 +111,7 @@
   "YY_WATER_FEATURES.ElevationChange": "Cambio de elevación",
   "YY_WATER_FEATURES.PlaceWaterSource": "Colocar fuente de agua",
   "YY_WATER_FEATURES.MoveWaterSource": "Mover fuente de agua",
-  "YY_WATER_FEATURES.RadiusChange": "Cambiar radio"
+  "YY_WATER_FEATURES.RadiusChange": "Cambiar radio",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versión",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Número de versión instalada del mod Water Features."
 }
