--- a/Water_Features/l10n/fr-FR.json
+++ b/Water_Features/l10n/fr-FR.json
@@ -3,6 +3,8 @@
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Variation de l'eau selon les saisons",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Outils pour l'eau",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Vagues et Marées",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Stable]": "Stable",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Experimental]": "Expérimental",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Variation de l'eau selon les saisons",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Outils pour l'eau",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Vagues et Marées",
@@ -42,16 +44,16 @@
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Damping]": "Une valeur plus haute augmente la force des vagues et une valeur plus basse diminue la force des vagues. Les vagues plus fortes vont atteindre plus loin dans la carte. Les vagues moins fortes risque de se dissiper avant d'atteindre la rive. En \"vanilla\" la valeur est de 9950, la valeur recommandé est entre 9980 et 9999. La valeur réelle est 10000x moins.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]": "Cycle de nettoyage de l'eau",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]": "Cela augmentera le taux d'évaporation de 1000x POUR LA TOTALITÉ DE VOTRE CARTE pour une courte période avant de revenir à la normale. Pour nettoyer les dégâts d'eau, mais UTILISEZ À VOS PROPRES RISQUES! Les lacs avec une altitude cible en dessous du niveau du sol sont un moyen plus sûr d'évacuer l'eau.",
-  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]": "Démarrer le cycle de nettoyage de l'eau\u202F?",
+  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]": "Démarrer le cycle de nettoyage de l'eau ?",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]": "Réinitialiser les paramètres de l'outil Eau",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]": "Lorsque confirmé, réinitialise les paramètres de l'outil d'eau.",
-  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]": "Réinitialiser les paramètres de l'outil Eau\u202F?",
+  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]": "Réinitialiser les paramètres de l'outil Eau ?",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]": "Réinitialiser les paramètres de ruisseaux saisonniers",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]": "Lorsque confirmé, réinitialise les paramètres de la variation de l'eau selon les saisons.",
-  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]": "Réinitialiser les paramètres de ruisseaux saisonniers\u202F?",
+  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]": "Réinitialiser les paramètres de ruisseaux saisonniers ?",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Réinitialiser les paramètres des vagues et des marées",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Lors de la confirmation, réinitialise les paramètres des vagues et des marées.",
-  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Réinitialiser les paramètres des vagues et des marées\u202F?",
+  "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Réinitialiser les paramètres des vagues et des marées ?",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]": "Diurne",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "Semi-diurne",
   "YY_WATER_FEATURES.Flow": "Débit",
@@ -93,8 +95,6 @@
   "Tooltip.LABEL[YY.WT.PlaceInsideBorder]": "Cette source d'eau doit être placé à l'intérieur des limites jouables.",
   "Tooltip.LABEL[YY.WT.MustTouchBorder]": "La source d'eau de la mer doit toucher les bordures de la carte.",
   "Tooltip.LABEL[YY.WT.LockElevation]": "Cliquez avec le bouton droit pour désigner l'altitude de la surface d'eau.",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Experimental]": "Expérimental",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Stable]": "Stable",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Fluide",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Modifie le facteur de fluidité du système d’eau. Impacte les caractéristiques d’écoulement de l’eau. Cela peut créer de petites vagues, causer des inondations ou encore des instabilités et des pics dans les systèmes d’eau.",
   "Editor.TOOL[Yenyang's Water Tool]": "Yenyang's Water Tool",
@@ -111,5 +111,7 @@
   "YY_WATER_FEATURES.ElevationChange": "Altitude Visée",
   "YY_WATER_FEATURES.PlaceWaterSource": "Placer une source d'eau",
   "YY_WATER_FEATURES.MoveWaterSource": "Déplacer la source d’eau",
-  "YY_WATER_FEATURES.RadiusChange": "Changer le rayon"
+  "YY_WATER_FEATURES.RadiusChange": "Changer le rayon",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Numéro de version du mod Water Features installé."
 }
